--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <small class="error-message"></small>
                     </div>
                     <div class="input-field">
-                        <input type="password" id="password" >
+                        <input type="password" id="login-password" >
                         <label>Password</label>
                         <i class="fas fa-check-circle remove"></i>
                         <i class="fas fa-exclamation-circle remove"></i>
